force-app/main/default/objects/Case_Creation_Doc_Requirement__c/Case_Creation_Doc_Requirement__c.object-meta.xml
<CustomObject>
    <description>Defines which Document Checklist items are required under a Case Creation Rule. Is_Required_To_Start__c = create a Draft doc checklist record when rule criteria are met (Phase 1). Is_Required_For_Case__c = all such docs must reach Final status before the Case is created (Phase 2).</description>
    <label>Case Creation Doc Requirement</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Creation Doc Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>