force-app/main/default/objects/Case_Creation_Doc_Requirement__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <description
  >Document type, dependent on Doc_Category__c. Global-value-set-backed replacement for the legacy Document Type field on this object. Not required at the field level (unlike the legacy field) because a restricted dependent picklist rejects any real value when Doc_Category__c is blank — marking this required would force every config record to have both fields set, which would remove the ability to represent an intentionally incomplete/in-progress config record.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Doc_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Document_Type</valueSetName>
    </valueSet>
</CustomField>