force-app/main/default/objects/Case_Creation_Doc_Requirement__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <description>DO NOT USE — deprecated, replaced by Doc_Category__c which is tied to the org's global value set. Retained only because this field could not be deleted (existing references block removal). High-level category for grouping. Optional — Document_Type__c is the runtime matching key.</description>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFx and Bid Documents</fullName>
            </value>
            <value>
                <fullName>Scoping and Technical Documents</fullName>
            </value>
            <value>
                <fullName>Statement of Work (SOW) Documents</fullName>
            </value>
            <value>
                <fullName>Pricing and Financial Documents</fullName>
            </value>
            <value>
                <fullName>Contract and Legal Documents</fullName>
            </value>
            <value>
                <fullName>Compliance, Risk and Privacy Documents</fullName>
            </value>
            <value>
                <fullName>Approval and Sign-off Documents</fullName>
            </value>
            <value>
                <fullName>Onboarding and Setup Documents</fullName>
            </value>
            <value>
                <fullName>Booking Verification Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>