force-app/main/default/objects/Case_Creation_Doc_Requirement__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Must exactly match the DocumentType__c picklist value on Document_Checklist__c. Used at runtime to match/create doc checklist records.</description>
    <label>Document Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>