force-app/main/default/objects/Case_Creation_Doc_Requirement__c/fields/Is_Required_For_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_For_Case__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true: Case_Creation_Trigger_Flow waits for this doc type to reach Final status before creating the Case record.</description>
    <label>Required for Case Creation (Phase 2)</label>
    <type>Checkbox</type>
</CustomField>