force-app/main/default/objects/Case_Creation_Doc_Requirement__c/fields/Is_Required_To_Start__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_To_Start__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true: Case_Creation_Eligibility_Flow creates a Document_Checklist__c record in Draft status when rule criteria are met on stage change.</description>
    <label>Required to Start (Phase 1)</label>
    <type>Checkbox</type>
</CustomField>