force-app/main/default/objects/Case_Creation_Doc_Requirement__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>Case_Creation_Rule__c</referenceTo>
    <relationshipLabel>Document Requirements</relationshipLabel>
    <relationshipName>Doc_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>