force-app/main/default/objects/Case_Creation_Doc_Requirement__c/listViews/All_Requirements.listView-meta.xml
<ListView>
    <fullName>All_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Document_Category__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Is_Required_To_Start__c</columns>
    <columns>Is_Required_For_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requirements</label>
</ListView>